--- a/document/bibliography.bib
+++ b/document/bibliography.bib
@@ -215,6 +215,17 @@ series = {PLDI 2021}
       primaryClass={cs.LO}
 }
 
+@article{LocalLexing-AFP,
+  author  = {Steven Obua},
+  title   = {Local Lexing},
+  journal = {Archive of Formal Proofs},
+  month   = {April},
+  year    = {2017},
+  note    = {\url{https://isa-afp.org/entries/LocalLexing.html},
+            Formal proof development},
+  ISSN    = {2150-914x},
+}
+
 % Future Work
 
 @article{Adams:2017,
